# autoperft

./: Cargo.toml  README.md
examples/: perftree_script.rs  run-perftree-script.sh
src/: lib.rs  main.rs
